# DFAB-hw3-Density-Based-Topology-Optimization

./: .gitignore  CMakeLists.txt  DensityField.cc  DensityField.hh  ElasticityTensor.hh  GridGeneration.hh  RegionLasso.cc  RegionLasso.hh  SymmetricMatrix.hh  TopologyOptimizer.cc  TopologyOptimizer.hh  Viewer.hh  VisualizationGeometry.hh  main.cc  tests.cc
data/: cantilever_2d_hi.config  cantilever_2d_lo.config  cantilever_2d_med.config  cantilever_3d_hi.config  cantilever_3d_lo.config  cantilever_3d_med.config  mbb_2d_hi.config  mbb_2d_lo.config  mbb_2d_med.config
